@@ -540,6 +540,28 @@ POLYGON ((190 190, 360 20, 20 20, 190 190),
    </case>
 
    <case>
+      <desc>A - one holes touches another at all vertices </desc>
+      <a>
+POLYGON( (0 0, 0 5, 6 5, 6 0, 0 0), (2 1, 4 1, 3 2, 2 1), (2 1, 1 4, 5 4, 4 1, 4 3, 3 2, 2 3, 2 1) )
+</a>
+      <test>
+         <op name="isValid" arg1="A">      false      </op>
+      </test>
+   </case>
+
+   <case>
+      <desc>A - one holes touches another at several vertices </desc>
+      <a>
+POLYGON ((0 0, 0 5, 6 5, 6 0, 0 0), 
+  (2.5 1, 3.5 1, 3.5 2, 2.5 2, 2.5 1), 
+  (2.5 1.5, 1 4, 5 4, 3.5 1.5, 4 3, 3 2, 2 3, 2.5 1.5))
+  </a>
+      <test>
+         <op name="isValid" arg1="A">      false      </op>
+      </test>
+   </case>
+
+   <case>
       <desc>A - hole disconnects interiors </desc>
       <a>
 POLYGON ((0 0, 10 10, 10 0, 0 0), 
