@@ -2,6 +2,7 @@ Changes in 3.3.1
 ????-??-??
 
 - Bug fixes / improvements
+  - ValidOp abort in presence of 2 touching holes forming an island (#449)
   - Enable prepared intersects operation for points
   - Fortify suspicious code found by static analisys tools
 
